# datatoolkit

./: Cargo.toml
src/: datapoint.rs  flexdata.rs  flexseries.rs  flextable.rs  lib.rs  main.rs
src/football/: data_check.rs  data_prep.rs  feature_add.rs  graphs.rs  jotter.rs_  mod.rs  models.rs
